services/data/postgres/5-netpol.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-my-webserver
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: postgres
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/16
    ports:
    - protocol: TCP
      port: 5432
